--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: cube
 
 # background display for mobile, not for pc
 header:
-  background: http://cube-1252774894.cosgz.myqcloud.com/background.png
+  background: http://josephliu.xyz/download/website/background/prekracnoe-daleko.jpg
   # both pc and mobile required title(make it the same as your hexo site _config.yml's title)
   title: Joseph Liu の 窝
 
@@ -10,12 +10,12 @@ header:
 # background display for pc
 # you can use url or path relative
 # `background: background.png` refers to the path "source/images/background.png"
-background: http://cube-1252774894.cosgz.myqcloud.com/background.png
+background: http://josephliu.xyz/download/website/background/prekracnoe-daleko.jpg
 
 
 # the background image width and height (you can see your image file to get them)
-width: 2000
-height: 1414
+width: 4894
+height: 2603
 
 
 # this variable is used to locate your background
