--- a/_config.yml
+++ b/_config.yml
@@ -57,28 +57,31 @@ menu:
 sidebar:
   links:
     - title: GitHub
-      url: https://github.com/ZEROKISEKI
+      url: https://github.com/ToKiNoBug
       # icon can be url or path
       icon: http://cube-1252774894.cosgz.myqcloud.com/links/GitHub.png
-    - title: Coding
-      url: https://coding.net/u/SORA1
-      icon: http://cube-1252774894.cosgz.myqcloud.com/links/Coding.png
-    - title: SF社区
-      url: https://segmentfault.com/u/aonosora
-      icon: http://cube-1252774894.cosgz.myqcloud.com/links/SF.png
-    - title: 开发者头条
-      url: https://toutiao.io/u/148070
-      icon: http://cube-1252774894.cosgz.myqcloud.com/links/开发者头条.png
+    - title: Bilibili
+      url: https://space.bilibili.com/351429231
+      icon: http://webdav.josephliu.xyz/download/website/icon/bilibili.png
+#    - title: Coding
+#      url: https://coding.net/u/SORA1
+#      icon: http://cube-1252774894.cosgz.myqcloud.com/links/Coding.png
+#    - title: SF社区
+#      url: https://segmentfault.com/u/aonosora
+#      icon: http://cube-1252774894.cosgz.myqcloud.com/links/SF.png
+#    - title: 开发者头条
+#      url: https://toutiao.io/u/148070
+#      icon: http://cube-1252774894.cosgz.myqcloud.com/links/开发者头条.png
   friend_links:
-    - title: 罗大佬
-      url: https://blog.micblo.com/
+    - title: Cubik65536
+      url: https://cubik65536.top/
       # icon only url
-      icon: http://cube-1252774894.cosgz.myqcloud.com/friend_links/micblo.png
-    - title: DIYgod
-      url: https://www.anotherhome.net/
-      icon: http://cube-1252774894.cosgz.myqcloud.com/friend_links/DIYgod.jpg
-    - title: 咪西西の部落格
-      url: https://aonosora.com/
+      icon: http://josephliu.xyz/download/website/icon/cubik65536.jpg
+#    - title: DIYgod
+#      url: https://www.anotherhome.net/
+#      icon: http://cube-1252774894.cosgz.myqcloud.com/friend_links/DIYgod.jpg
+#    - title: 咪西西の部落格
+#      url: https://aonosora.com/
 
 # only path, refer to source/images
 friend_links: friend_links.jpg
